--- a/src/main/resources/messages_ru_RU.properties
+++ b/src/main/resources/messages_ru_RU.properties
@@ -16,7 +16,6 @@ reply.askSignUp=\u0427\u0435\u043A\u0430\u0454\u043C\u043E \u0432 \u0433\u043E\u
 reply.askServices=\u041D\u0430\u0448\u0456 \u043F\u043E\u0441\u043B\u0443\u0433\u0438
 
 reply.chooseCategory=\u041E\u0431\u0435\u0440\u0438 \u043A\u0430\u0442\u0435\u0433\u043E\u0440\u0456\u044E
-
-
+reply.emptyBucket=<b>\u0422\u0432\u043E\u044F \u043A\u043E\u0440\u0437\u0438\u043D\u0430 \u043F\u0443\u0441\u0442\u0430</b> <a href="https://charliebot.s3.eu-central-1.amazonaws.com/pricing1.jpg">&#8205;</a>
 
 reply.showMainMenu =Use Buttons
